--- a/src/main/resources/templates/admin/user-check.html
+++ b/src/main/resources/templates/admin/user-check.html
@@ -12,6 +12,8 @@ Username: <p style="display:inline" th:text="${user.username}">Username</p>
 <br/>
 Social credit: <p style="display:inline" th:text="${user.socialCredit}">Social credit</p>
 <br/>
+Role: <p style="display:inline" th:text="${user.roles}">roles</p>
+<br/>
 <br/>
 <hr/>
 
